rename quetion to q, some move to server, messing with smooth scrolling, answer anchors, need tighter q interface

--- a/client/alpha.jade
+++ b/client/alpha.jade
@@ -44,7 +44,7 @@ template(name='alpha')
                         // .item related: #{related}
                         // .item version: #{version}
                     each pods
-                        span.say
+                        div.say
                             // .ui.small.inline.middle.aligned.header.middled #{title}
                             .ui.small.inline.header #{title}
                             div
