--- a/client/client.jade
+++ b/client/client.jade
@@ -35,6 +35,6 @@ head
 
 template(name='layout')
     +nav
-    .ui.bottom.attached.pushable.segment
-        #main_area.pusher(class=currentUser.invert_class)
-            +yield
+    +yield
+    // .ui.bottom.attached.pushable.segment
+    //     #main_area.pusher(class=currentUser.invert_class)
