--- a/client/s.css
+++ b/client/s.css
@@ -14,6 +14,10 @@ body {
     /*transition: all .25s ease !important;*/
     /* background: #0e0e44 !important; */
 }
+html {
+  scroll-behavior: smooth;
+}
+
 .full {
   max-width: inherit !important;
   width: inherit !important;
@@ -383,8 +387,9 @@ a.goto_article {
 
 }
 .superzoom:hover {
-    transition: all .25s ease !important; 
+    transition: all .3s ease !important; 
     transform: scale(3) !important;
+    /*transform: rotate(20deg) !important;*/
     z-index:1000 !important;
     /*border-radius: 7px !important;*/
     /*animation: fadein .5s !important;*/
@@ -608,7 +613,7 @@ input {
     border-color: grey !important;
     border-style: solid !important; */
     overflow-y:scroll;
-    /*overflow-x:hidden;*/
+    overflow-x:hidden;
     /*z-index:1001;*/
     /*margin-top: 1em; */
     padding-top: .5em; 
