--- a/client/alpha.jade
+++ b/client/alpha.jade
@@ -57,7 +57,7 @@ template(name='alpha')
                             // .ui.list
                             each subpods
                                 .ui.small.inline.header #{title}
-                                img.ui.zoomer.pointer.image.invert.alphatemp(src=img.src)
+                                // img.ui.zoomer.pointer.image.invert.alphatemp(src=img.src)
                                 // .item.alphatemp
                                 span.say #{plaintext}
                                 // .item title: #{title}
