--- a/client/stack.jade
+++ b/client/stack.jade
@@ -16,7 +16,7 @@ template(name='stack')
                         .ui.center.aligned.basic.segment
                             i.massive.grey.yin.yang.loading.icon
                     each site_docs
-                        .center.aligned.column.pointer.goto_site.zoomer.raise
+                        .center.aligned.column.pointer.goto_site
                             // img.ui.inline.tiny.image.mobile.hiden.site.shadowed.zoomer(src=high_resolution_icon_url)
                             img.ui.inline.image.site.shadowed(src=logo_url)
                             // .header
