--- a/client/q.jade
+++ b/client/q.jade
@@ -34,13 +34,12 @@ template(name='stack_page')
                                     if is_accepted 
                                         .ui.green.label.zoomer
                                             |accepted
-                                    // div(class=currentUser.invert_class)
-                                    .f10.say.pointer !{body}
+                                    .say !{body}
                                     with owner
                                         .ui.divider
                                         i.chat.icon
                                         a.say.ui.inline.header.say.zoomer.refresh_user(href="/site/#{current_doc.site}/user/#{user_id}" class=post_header_class)
-                                            img.ui.avatar.invert.image(src=profile_image)
+                                            img.ui.avatar.image(src=profile_image)
                                             |!{display_name}
                                             |#{reputation}
                                         .say.ui.basic.small.label #{user_id}
@@ -52,36 +51,36 @@ template(name='stack_page')
                                 i.reply.grey.icon
                                 |#{question_answers.count} answers
                             each question_answers
-                                .ui.basic.segment(class=answer_class)
-                                    div(id=_id)
-                                    if is_accepted 
-                                        .ui.green.corner.attached.label.zoomer
-                                            i.checkmark.icon
-                                    // div(class=currentUser.invert_class)
-                                    .say !{body}
-                                    .ui.divider
-                                    .ui.horizontal.list
-                                        .item 
-                                            small active
-                                            |{{ufrom last_activity_date}}
-                                        .item
-                                            small edited
-                                            |{{ufrom last_edit_date}}
-                                        .item
-                                            small created
-                                            |{{ufrom creation_date}}
-        
+                                .ui.basic.segment(class=answer_class id=_id)
+                                    // div(id=_id)
                                     with owner
-                                        div
-                                        a.ui.header.say.zoomer.refresh_user(href="/site/#{current_doc.site}/user/#{user_id}")
-                                            img.ui.avatar.invert.image(src=profile_image)
+                                        a.ui.header.say.refresh_user(href="/site/#{site}/user/#{user_id}")
+                                            img.ui.avatar.image(src=profile_image)
                                             |!{display_name}
-                                            small #{reputation}
-                                        // |#{user_id}
-                                        // |#{user_type}
-                                        // |#{accept_rate}
+                                            strong #{reputation}
+                                            if accept_rate
+                                                small #{accept_rate}%
                                         a.ui.icon.small.basic.circular.button(href=link)
                                             i.external.icon
+                                    // .ui.divider
+                                    .ui.horizontal.list
+                                        if last_activity_date
+                                            .item 
+                                                small active
+                                                |{{ufrom last_activity_date}}
+                                        if last_edit_date
+                                            .item
+                                                small edited
+                                                |{{ufrom last_edit_date}}
+                                        if creation_date
+                                            .item
+                                                small added
+                                                |{{ufrom creation_date}}
+                                    if is_accepted 
+                                        .ui.green.corner.attached.label.rounded
+                                            i.checkmark.icon
+                                    .say !{body}
+        
                                     // |#{content_license}
                                     if in_dev 
                                         +remove_button
@@ -103,17 +102,17 @@ template(name='stack_page')
                     a.ui.fluid.basic.circular.compact.tertiary.button.say(href="/site/#{site}") 
                         i.chevron.left.icon
                         if watson.metadata.image
-                            img.ui.invert.tiny.inline.image(src=watson.metadata.image)    
+                            img.ui.tiny.inline.image(src=watson.metadata.image)    
                         | #{site}
                     +doc_emotion
-                    .ui.fluid.vertical.menu
+                    .ui.fluid.vertical.borderless.menu
                         a.item(href='#answers') #{answer_count} answers
                         each question_answers
                             a.item(href="##{_id}")  
                                 if is_accepted
                                     i.large.checkmark.icon
                                 |#{score}
-                                img.ui.avatar.invert.image(src=owner.profile_image)
+                                img.ui.avatar.image(src=owner.profile_image)
                                 |!{owner.display_name}
 
                     with owner
