--- a/client/s.css
+++ b/client/s.css
@@ -634,19 +634,19 @@ input {
 } 
 
 
-.button, .selector, .card, .dark_mode, .ui.header, .ui.label, p, img{
-    animation: fadein 1s !important;
-    /*-webkit-transition: opacity .1s ease-in !important;*/
-    /* -webkit-transition: opacity .1s ease-out; */
-    /*animation: fadeout .1s; */
+.button,.selector,.card,.dark_mode,.item,.ui.header,.ui.label,p,img{
+    animation: fadein 2s !important;
+    /*-webkit-transition: opacity .2s ease-in !important;*/
+    /* -webkit-transition: opacity .2s ease-out; */
+    /*animation: fadeout .2s; */
 }
 
 
 .icon:not(.loading){
-    animation: fadein 1s !important;
-    transition: all 1s ease !important;
+    animation: fadein 2s !important;
+    transition: all 2s ease !important;
     /* -webkit-transition: opacity .25s ease-out; */
-    animation: fadeout 1s; 
+    animation: fadeout 2s; 
 }
 
 
@@ -680,7 +680,7 @@ input {
 }
 
 .result_column {
-  /* animation: fadein 1s; */
+  /* animation: fadein 2s; */
 }
 
 @media screen and (max-width: 1100px) {
