cs, simple, center column

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -15,7 +15,7 @@ template(name='nav')
             a.icon.zoomer.item.clear_tags.goto_reddit(href='/reddit' class="{{isActiveRoute regex='reddit'}}" title='reddit')
                 i.large.reddit.grey.icon
             a.icon.zoomer.item.silence(href='#')
-                i.large.volume.mute.grey.icon
+                i.large.ban.grey.icon
             // a.icon.disabled.item.goto_wikipedia(href='/wikipedia')
             //     i.large.wikipedia.icon
         unless connected
