--- a/client/dao.jade
+++ b/client/dao.jade
@@ -183,7 +183,7 @@ template(name='convert')
 
 
 template(name='unselect_tag')
-    a.unselect_tag.ui.black.compact.button.select_term(href='#')
+    a.unselect_tag.ui.black.compact.circular.button.select_term(href='#')
         if term
             img.ui.avatar.compact.image.superzoom(src=term.watson.metadata.image)    
         strong #{this}
