--- a/client/sq.jade
+++ b/client/sq.jade
@@ -3,8 +3,8 @@ template(name='site_questions')
         .ui.stackable.grid
             .row
                 .ui.twelve.wide.center.aligned.column
-                    img.ui.medium.get_info.shadowed.ui.inline.image(src=logo_url )
-                    span.say.mobile.hidden !{audience}
+                    img.ui.get_info.shadowed.ui.inline.image(src=logo_url )
+                    // span.say.mobile.hidden !{audience}
                     if selected_tags
                         // if many_tags
                         //     a#clear_tags.ui.black.invert.icon.compact.button.select_term
