--- a/client/stack.jade
+++ b/client/stack.jade
@@ -8,7 +8,7 @@ template(name='stack')
                 .ui.icon.input
                     i.search.icon
                     input.search_site_name(type='text')
-                +cloud filter='stack_site'
+                // +cloud filter='stack_site'
                 .spacer
             .sixteen.wide.center.aligned.column.scrolling
                 .ui.four.column.stackable.center.aligned.grid
