--- a/client/sq.jade
+++ b/client/sq.jade
@@ -3,7 +3,7 @@ template(name='site_questions')
         .ui.stackable.grid
             .row
                 .ui.twelve.wide.center.aligned.column
-                    img.ui.get_info.shadowed.ui.inline.image(src=logo_url )
+                    img.ui.get_info.shadowed.ui.inline.small.image(src=logo_url )
                     // span.say.mobile.hidden !{audience}
                     if selected_tags
                         // if many_tags
